VoucherStream Profile 재설정 및 PercentDiscountVoucher 변수명 변경 | percent -> rate